--- a/css/responsive.css
+++ b/css/responsive.css
@@ -463,6 +463,15 @@ input {
     margin: 2% 0;
 }/* End of thirdFooter styling*/
 
+
+/* Arrow/send button small screen styling */
+@media only screen and (min-width: 0) and (max-width: 363px) {
+.subscribeBox img {
+    float: none;
+    position: absolute;
+}
+}
+
 } /* END of @media only screen and (min-width: 0) and (max-width: 767px)*/
 
 
